удалила лишнее в кондиционере
